--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- === BCrypt (cryptage des mot de passe utilisateur) === -->
         <dependency>
             <groupId>org.mindrot</groupId>
