--- a/src/main/resources/config/db.properties
+++ b/src/main/resources/config/db.properties
@@ -1,6 +1,6 @@
 # Fichier: config/db.properties
 
-datasource.url=jdbc:mysql://localhost:3306/oralcare_db?useSSL=false&serverTimezone=UTC
+datasource.url=jdbc:mysql://localhost:3306/oralcare_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 datasource.user=root
 datasource.password=root
 datasource.driver=com.mysql.cj.jdbc.Driver
