--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,12 @@
             <artifactId>jdatepicker</artifactId>
             <version>1.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.7</version>
+        </dependency>
+
     </dependencies>
 
     <!-- ================== Build & Plugins ==================
